--- a/ExperimentWithControls/MainWindow.xaml
+++ b/ExperimentWithControls/MainWindow.xaml
@@ -16,6 +16,38 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
+        <Label Content="Enter a number." HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="18"/>
+        <TextBox x:Name="numberTextBox" HorizontalAlignment="Left" Margin="10,49,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" FontSize="18" TextChanged="NumberTextBox_TextChanged" PreviewTextInput="NumberTextBox_PreviewTextInput"/>
+        <TextBlock x:Name="number" Grid.Column="1" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" FontSize="24"/>
+        <RadioButton Content="1" HorizontalAlignment="Left" Margin="161,53,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
+        <RadioButton Content="2" HorizontalAlignment="Left" Margin="197,53,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
+        <RadioButton Content="3" HorizontalAlignment="Left" Margin="231,53,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
+        <RadioButton Content="4" HorizontalAlignment="Left" Margin="161,70,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
+        <RadioButton Content="6" HorizontalAlignment="Left" Margin="231,70,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
+        <RadioButton Content="5" HorizontalAlignment="Left" Margin="197,70,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
+        <ListBox x:Name="myListBox" Height="100" Grid.Row="1" Width="100" Margin="10" HorizontalAlignment="Left" VerticalAlignment="Top" SelectionChanged="ListBoxItem_SelectionChanged">
+            <ListBoxItem Content="1"/>
+            <ListBoxItem Content="2"/>
+            <ListBoxItem Content="3"/>
+            <ListBoxItem Content="4"/>
+            <ListBoxItem Content="5"/>
+        </ListBox>
+        <ComboBox x:Name="readOnlyComboBox" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="120" Grid.Column="1" IsReadOnly="True" SelectionChanged="ReadOnlyComboBox_SelectionChanged">
+            <ComboBoxItem Content="1"/>
+            <ComboBoxItem Content="2"/>
+            <ComboBoxItem Content="3"/>
+            <ComboBoxItem Content="4"/>
+            <ComboBoxItem Content="5"/>
+        </ComboBox>
+        <ComboBox x:Name="editableComboBox" Grid.Column="1" HorizontalAlignment="Left" Margin="145,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="120" IsEditable="True" SelectionChanged="ComboBox_SelectionChanged" PreviewTextInput="NumberTextBox_PreviewTextInput">
+            <ComboBoxItem Content="1"/>
+            <ComboBoxItem Content="2"/>
+            <ComboBoxItem Content="3"/>
+            <ComboBoxItem Content="4"/>
+            <ComboBoxItem Content="5"/>
+        </ComboBox>
+        <Slider x:Name="smallSlider" Margin="10,10,0,0" Grid.Row="2" VerticalAlignment="Top" AutoToolTipPlacement="TopLeft" Maximum="5" Minimum="1" ValueChanged="SmallSlider_ValueChanged"/>
+        <Slider x:Name="ridiculousSlider" Margin="10" Grid.Row="2" VerticalAlignment="Center" AutoToolTipPlacement="TopLeft" Maximum="999999999" Minimum="111111111" ValueChanged="Slider_ValueChanged" Grid.ColumnSpan="2"/>
 
     </Grid>
 </Window>
